--- a/css/copyright.css
+++ b/css/copyright.css
@@ -3,4 +3,12 @@
     bottom:0%;
     width:100%;
     text-align:center;
+    z-index:10;
+}
+#CopyrightInFrame {
+    position:fixed;
+    bottom:0%;
+    width:100%;
+    text-align:center;
+    z-index:10;
 }
